# privacy-preserving-xgboost-inference

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/: readmitted.csv
example/: Iris.ipynb  Titanic.ipynb  Titanic.py  readmitted.ipynb  tree.txt
example/.ipynb_checkpoints/: Iris-checkpoint.ipynb  Titanic-checkpoint.ipynb
examples/: Iris.ipynb  Titanic.ipynb  readmitted.ipynb
src/ope/pyope/: stat.py
src/ppxgboost/: BoosterParser.py  Model.py  OPEMetadata.py  PPBooster.py  PPKey.py  PPModel.py  PPPrediction.py  PPQuery.py  PPTree.py  PaillierAPI.py  Tree.py  __init__.py
test/: test_PPKey.py  test_ppxg_boost.py
test/test_files/: model_file.pkl  test_prediction_input.csv
