# https://ianhopkinson.org.uk/2022/02/understanding-setup-py-setup-cfg-and-pyproject-toml-in-python/
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ppxgboost"
version = "0.0.1"
dependencies = [
    "numpy==1.22.0",
    "pandas==1.5.3",
    "phe==1.5.0",
    "xgboost>=1.6.2",
    "pytest==7.2.1",
    "pyope==0.2.2",
]

[project.optional-dependencies]
examples = ["jupyter", "scikit-learn>=1.0.2",]
